# git-didi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: test-strategy.md
scripts/: generate-test-scenario.py
shell/: git-didi.bash
src/didi/: __init__.py  cli.py  color.py  diff.py  pager.py
src/didi/commands/: __init__.py  shell_integration.py
src/didi/shell/: git-didi.fish
tests/: test_color.py  test_diff.py  test_import.py
