[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-didi"
version = "0.1.1"
description = "Compare diffs between two git ranges - a 'diff of diffs' tool for verifying rebases and tracking changes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ryan Williams", email = "ryan@runsascoded.com"},
]
keywords = ["git", "diff", "rebase", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "utz>=0.21.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.urls]
Repository = "https://github.com/runsascoded/git-didi"
Issues = "https://github.com/runsascoded/git-didi/issues"

[project.scripts]
git-didi = "didi.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
didi = ["shell/*.bash", "shell/*.fish"]
